# llm-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
backend/: config.yaml  inference_client.py  model_loader.py
frontend/: streamlit_app.py
scripts/: build_and_run_docker.py
server_local/: flask.py
tests/: test_inference_client.py
