[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_inference_package"
version = "0.1.0"
description = "A package for loading LLMs, running inference, and displaying results via Streamlit."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.authors]
name = "Your Name"
email = "your.email@example.com"

[tool.setuptools]
packages = ["backend", "frontend"]
include_package_data = true

[tool.setuptools.package-data]
"*": ["*.yaml", "*.txt"]
